test/gpu/native/errors/assertOnGpuIneligibleLoop.good
assertOnGpuIneligibleLoop.chpl:14: error: assertOnGpu() failed
